Fixed link button spacing

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -306,3 +306,7 @@
 .assignment-display {
   justify-content: center;
 }
+
+.delete-button {
+  margin-left: var(--spaceM);
+}
